--- a/src/application/dashboard.fxml
+++ b/src/application/dashboard.fxml
@@ -13,7 +13,7 @@
 <?import javafx.scene.shape.Line?>
 <?import javafx.scene.text.Font?>
 
-<StackPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="1100.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1">
+<StackPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="1100.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.dashboardController">
    <children>
       <AnchorPane prefHeight="200.0" prefWidth="200.0">
          <children>
@@ -29,7 +29,7 @@
                                     <Font name="Tahoma" size="15.0" />
                                  </font>
                               </Label>
-                              <Button layoutX="1041.0" layoutY="5.0" mnemonicParsing="false" prefHeight="26.0" prefWidth="40.0" styleClass="close" stylesheets="@dashboardDesign.css" />
+                              <Button fx:id="close" layoutX="1041.0" layoutY="5.0" mnemonicParsing="false" onAction="#close" prefHeight="26.0" prefWidth="40.0" styleClass="close" stylesheets="@dashboardDesign.css" />
                               <FontAwesomeIconView glyphName="CLOSE" layoutX="1056.0" layoutY="23.0" size="1.2em" />
                            </children>
                         </AnchorPane>
@@ -75,7 +75,7 @@
                <center>
                   <AnchorPane prefHeight="200.0" prefWidth="200.0" BorderPane.alignment="CENTER">
                      <children>
-                        <AnchorPane layoutX="101.0" layoutY="140.0" prefHeight="555.0" prefWidth="900.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+                        <AnchorPane fx:id="searchForm" layoutX="101.0" layoutY="140.0" prefHeight="555.0" prefWidth="900.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
                            <children>
                               <AnchorPane layoutX="14.0" layoutY="12.0" prefHeight="532.0" prefWidth="255.0" stylesheets="@dashboardDesign.css">
                                  <styleClass>
@@ -88,8 +88,8 @@
                                           <Font name="Tahoma" size="15.0" />
                                        </font>
                                     </Label>
-                                    <TextField layoutX="86.0" layoutY="61.0" prefHeight="25.0" prefWidth="155.0" styleClass="label-info" stylesheets="@dashboardDesign.css" />
-                                    <TextField layoutX="86.0" layoutY="111.0" prefHeight="25.0" prefWidth="155.0" styleClass="label-info" stylesheets="@dashboardDesign.css" />
+                                    <TextField fx:id="bookDate" layoutX="86.0" layoutY="61.0" prefHeight="25.0" prefWidth="155.0" styleClass="label-info" stylesheets="@dashboardDesign.css" />
+                                    <TextField fx:id="bookRoom" layoutX="86.0" layoutY="111.0" prefHeight="25.0" prefWidth="155.0" styleClass="label-info" stylesheets="@dashboardDesign.css" />
                                     <Label layoutX="19.0" layoutY="115.0" text="Room:">
                                        <font>
                                           <Font name="Tahoma" size="15.0" />
@@ -110,11 +110,11 @@
                                           <Font name="Tahoma" size="15.0" />
                                        </font>
                                     </Label>
-                                    <TextField layoutX="86.0" layoutY="157.0" prefHeight="25.0" prefWidth="155.0" styleClass="label-info" stylesheets="@dashboardDesign.css" />
-                                    <TextField layoutX="86.0" layoutY="205.0" prefHeight="25.0" prefWidth="155.0" styleClass="label-info" stylesheets="@dashboardDesign.css" />
-                                    <TextField layoutX="86.0" layoutY="253.0" prefHeight="25.0" prefWidth="155.0" styleClass="label-info" stylesheets="@dashboardDesign.css" />
-                                    <Button layoutX="29.0" layoutY="324.0" mnemonicParsing="false" prefHeight="35.0" prefWidth="82.0" styleClass="clear-btn" stylesheets="@dashboardDesign.css" text="Clear" />
-                                    <Button layoutX="134.0" layoutY="324.0" mnemonicParsing="false" prefHeight="35.0" prefWidth="82.0" styleClass="book-btn" stylesheets="@dashboardDesign.css" text="Book" />
+                                    <TextField fx:id="bookBuilding" layoutX="86.0" layoutY="157.0" prefHeight="25.0" prefWidth="155.0" styleClass="label-info" stylesheets="@dashboardDesign.css" />
+                                    <TextField fx:id="bookStart" layoutX="86.0" layoutY="205.0" prefHeight="25.0" prefWidth="155.0" styleClass="label-info" stylesheets="@dashboardDesign.css" />
+                                    <TextField fx:id="bookEnd" layoutX="86.0" layoutY="253.0" prefHeight="25.0" prefWidth="155.0" styleClass="label-info" stylesheets="@dashboardDesign.css" />
+                                    <Button fx:id="clearBtn" layoutX="29.0" layoutY="324.0" mnemonicParsing="false" prefHeight="35.0" prefWidth="82.0" styleClass="clear-btn" stylesheets="@dashboardDesign.css" text="Clear" />
+                                    <Button fx:id="bookBtn" layoutX="134.0" layoutY="324.0" mnemonicParsing="false" prefHeight="35.0" prefWidth="82.0" styleClass="book-btn" stylesheets="@dashboardDesign.css" text="Book" />
                                  </children>
                               </AnchorPane>
                               <AnchorPane layoutX="281.0" layoutY="12.0" prefHeight="532.0" prefWidth="609.0" stylesheets="@dashboardDesign.css">
