--- a/src/application/dashboard.fxml
+++ b/src/application/dashboard.fxml
@@ -48,7 +48,7 @@
                                  </font>
                               </Label>
                               <Line endX="109.5" layoutX="74.0" layoutY="187.0" startX="-58.0" stroke="WHITE" />
-                              <Button layoutX="10.0" layoutY="232.0" mnemonicParsing="false" prefHeight="35.0" prefWidth="180.0" styleClass="nav-btn" stylesheets="@dashboardDesign.css" text="Booking" textFill="WHITE">
+                              <Button fx:id="booking_btn" layoutX="10.0" layoutY="232.0" mnemonicParsing="false" onAction="#switchForm" prefHeight="35.0" prefWidth="180.0" styleClass="nav-btn" stylesheets="@dashboardDesign.css" text="Booking" textFill="WHITE">
                                  <graphic>
                                     <FontAwesomeIconView fill="WHITE" glyphName="CLIPBOARD" size="1.5em" />
                                  </graphic>
