--- a/src/application/dashboard.fxml
+++ b/src/application/dashboard.fxml
@@ -142,7 +142,7 @@
                                           <String fx:value="table-column" />
                                        </styleClass>
                                     </TableView>
-                                    <TextField fx:id="search" layoutX="14.0" layoutY="35.0" prefHeight="30.0" prefWidth="270.0" promptText="Search" styleClass="search" stylesheets="@dashboardDesign.css">
+                                    <TextField fx:id="search" layoutX="14.0" layoutY="35.0" onKeyTyped="#roomSearch" prefHeight="30.0" prefWidth="270.0" promptText="Search" styleClass="search" stylesheets="@dashboardDesign.css">
                                        <font>
                                           <Font name="Tahoma" size="15.0" />
                                        </font></TextField>
