--- a/src/application/Welcome.fxml
+++ b/src/application/Welcome.fxml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
-<?import javafx.scene.control.PasswordField?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
@@ -10,18 +10,18 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="400.0" minWidth="600.0" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="view.WelcomeController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="400.0" minWidth="600.0" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.WelcomeController">
    <children>
       
       <Label layoutX="300.0" layoutY="141.0" text="User Name" />
-      <Label layoutX="300.0" layoutY="189.0" text="Passport" />
+      <Label layoutX="300.0" layoutY="189.0" text="Password" />
       <TextField fx:id="text_field_welcome_username" layoutX="368.0" layoutY="137.0" onKeyTyped="#Input_UserName" />
       <TextField fx:id="text_field_welcome_password" layoutX="368.0" layoutY="185.0" onKeyTyped="#Input_Password" />
 
       <Button fx:id="button_welcome_login" layoutX="368.0" layoutY="242.0" mnemonicParsing="false" onAction="#login" prefHeight="25.0" prefWidth="143.0" style="-fx-background-color: black;" text="Login" textFill="WHITE" />
       <ImageView fitHeight="199.0" fitWidth="200.0" layoutX="35.0" layoutY="85.0">
          <image>
-            <Image url="@../../../Screenshot%202023-11-24%20at%202.32.35%20PM.png" />
+            <Image url="@../../../huskiesground/src/images/Husky.png" />
          </image>
       </ImageView>
       <Text layoutX="300.0" layoutY="70.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Welcome!">
@@ -29,7 +29,7 @@
             <Font size="50.0" />
          </font>
       </Text>
-      <Text layoutX="300.0" layoutY="103.0" strokeType="OUTSIDE" strokeWidth="0.0" text="NEU Classroom Seaching/Booking System" />
+      <Text layoutX="300.0" layoutY="103.0" strokeType="OUTSIDE" strokeWidth="0.0" text="NEU Classroom Searching and Booking System" />
       <Text layoutX="300.0" layoutY="340.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Design by HysichyGroup" />
    </children>
 </AnchorPane>
