--- a/src/application/dashboard.fxml
+++ b/src/application/dashboard.fxml
@@ -110,7 +110,7 @@
                                     <TextField fx:id="bookStart" layoutX="86.0" layoutY="205.0" prefHeight="25.0" prefWidth="155.0" styleClass="label-info" stylesheets="@dashboardDesign.css" />
                                     <TextField fx:id="bookEnd" layoutX="86.0" layoutY="253.0" prefHeight="25.0" prefWidth="155.0" styleClass="label-info" stylesheets="@dashboardDesign.css" />
                                     <Button fx:id="clearBtn" layoutX="29.0" layoutY="324.0" mnemonicParsing="false" prefHeight="35.0" prefWidth="82.0" styleClass="clear-btn" stylesheets="@dashboardDesign.css" text="Clear" onAction="#clearFields"/>
-                                    <Button fx:id="bookBtn" layoutX="134.0" layoutY="324.0" mnemonicParsing="false" prefHeight="35.0" prefWidth="82.0" styleClass="book-btn" stylesheets="@dashboardDesign.css" text="Book" onAction="#bookRoom" />
+                                    <Button fx:id="bookBtn" layoutX="134.0" layoutY="324.0" mnemonicParsing="false" prefHeight="35.0" prefWidth="82.0" styleClass="book-btn" stylesheets="@dashboardDesign.css" text="Book" onAction="#bookARoom" />
                                  </children>
                               </AnchorPane>
                               <AnchorPane layoutX="281.0" layoutY="12.0" prefHeight="532.0" prefWidth="609.0" stylesheets="@dashboardDesign.css">
