--- a/src/application/Welcome.fxml
+++ b/src/application/Welcome.fxml
@@ -9,14 +9,14 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
-
+<?import javafx.scene.control.PasswordField?>
 <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="400.0" minWidth="600.0" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.WelcomeController">
    <children>
       
       <Label layoutX="300.0" layoutY="141.0" text="User Name" />
       <Label layoutX="300.0" layoutY="189.0" text="Password" />
       <TextField fx:id="text_field_welcome_username" layoutX="368.0" layoutY="137.0" onKeyTyped="#Input_UserName" />
-      <TextField fx:id="text_field_welcome_password" layoutX="368.0" layoutY="185.0" onKeyTyped="#Input_Password" />
+      <PasswordField fx:id="text_field_welcome_password" layoutX="368.0" layoutY="185.0" onKeyTyped="#Input_Password" />
 
       <Button fx:id="button_welcome_login" layoutX="368.0" layoutY="242.0" mnemonicParsing="false" onAction="#login" prefHeight="25.0" prefWidth="143.0" style="-fx-background-color: black;" text="Login" textFill="WHITE" />
       <ImageView fitHeight="199.0" fitWidth="200.0" layoutX="35.0" layoutY="85.0">
