--- a/src/application/Welcome.fxml
+++ b/src/application/Welcome.fxml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TextField?>
@@ -30,6 +29,6 @@
          </font>
       </Text>
       <Text layoutX="300.0" layoutY="103.0" strokeType="OUTSIDE" strokeWidth="0.0" text="NEU Classroom Searching and Booking System" />
-      <Text layoutX="300.0" layoutY="340.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Design by HysichyGroup" />
+      <Text layoutX="300.0" layoutY="340.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Design by HuskiesGround" />
    </children>
 </AnchorPane>
