--- a/src/application/dashboard.fxml
+++ b/src/application/dashboard.fxml
@@ -84,8 +84,8 @@
                                           <Font name="Tahoma" size="15.0" />
                                        </font>
                                     </Label>
-                                    <TextField fx:id="bookDate" layoutX="86.0" layoutY="61.0" prefHeight="25.0" prefWidth="155.0" styleClass="label-info" stylesheets="@dashboardDesign.css" />
-                                    <TextField fx:id="bookRoom" layoutX="86.0" layoutY="111.0" prefHeight="25.0" prefWidth="155.0" styleClass="label-info" stylesheets="@dashboardDesign.css" />
+                                    <TextField fx:id="bookDate" editable="false" layoutX="86.0" layoutY="61.0" prefHeight="25.0" prefWidth="155.0" styleClass="label-info" stylesheets="@dashboardDesign.css" />
+                                    <TextField fx:id="bookRoom" editable="false" layoutX="86.0" layoutY="111.0" prefHeight="25.0" prefWidth="155.0" styleClass="label-info" stylesheets="@dashboardDesign.css" />
                                     <Label layoutX="19.0" layoutY="115.0" text="Room:">
                                        <font>
                                           <Font name="Tahoma" size="15.0" />
@@ -106,9 +106,9 @@
                                           <Font name="Tahoma" size="15.0" />
                                        </font>
                                     </Label>
-                                    <TextField fx:id="bookBuilding" layoutX="86.0" layoutY="157.0" prefHeight="25.0" prefWidth="155.0" styleClass="label-info" stylesheets="@dashboardDesign.css" />
-                                    <TextField fx:id="bookStart" layoutX="86.0" layoutY="205.0" prefHeight="25.0" prefWidth="155.0" styleClass="label-info" stylesheets="@dashboardDesign.css" />
-                                    <TextField fx:id="bookEnd" layoutX="86.0" layoutY="253.0" prefHeight="25.0" prefWidth="155.0" styleClass="label-info" stylesheets="@dashboardDesign.css" />
+                                    <TextField fx:id="bookBuilding" editable="false" layoutX="86.0" layoutY="157.0" prefHeight="25.0" prefWidth="155.0" styleClass="label-info" stylesheets="@dashboardDesign.css" />
+                                    <TextField fx:id="bookStart" editable="false" layoutX="86.0" layoutY="205.0" prefHeight="25.0" prefWidth="155.0" styleClass="label-info" stylesheets="@dashboardDesign.css" />
+                                    <TextField fx:id="bookEnd" editable="false" layoutX="86.0" layoutY="253.0" prefHeight="25.0" prefWidth="155.0" styleClass="label-info" stylesheets="@dashboardDesign.css" />
                                     <Button fx:id="clearBtn" layoutX="29.0" layoutY="324.0" mnemonicParsing="false" onAction="#clearFields" prefHeight="35.0" prefWidth="82.0" styleClass="clear-btn" stylesheets="@dashboardDesign.css" text="Clear" />
                                     <Button fx:id="bookBtn" layoutX="134.0" layoutY="324.0" mnemonicParsing="false" onAction="#bookARoom" prefHeight="35.0" prefWidth="82.0" styleClass="book-btn" stylesheets="@dashboardDesign.css" text="Book" />
                                  </children>
@@ -155,8 +155,8 @@
                                           <Font name="Tahoma" size="15.0" />
                                        </font>
                                     </Label>
-                                    <TextField fx:id="bookDate1" layoutX="86.0" layoutY="61.0" prefHeight="25.0" prefWidth="155.0" styleClass="label-info" stylesheets="@dashboardDesign.css" />
-                                    <TextField fx:id="bookRoom1" layoutX="86.0" layoutY="111.0" prefHeight="25.0" prefWidth="155.0" styleClass="label-info" stylesheets="@dashboardDesign.css" />
+                                    <TextField fx:id="bookDate1" editable="false" layoutX="86.0" layoutY="61.0" prefHeight="25.0" prefWidth="155.0" styleClass="label-info" stylesheets="@dashboardDesign.css" />
+                                    <TextField fx:id="bookRoom1" editable="false" layoutX="86.0" layoutY="111.0" prefHeight="25.0" prefWidth="155.0" styleClass="label-info" stylesheets="@dashboardDesign.css" />
                                     <Label layoutX="19.0" layoutY="115.0" text="Room:">
                                        <font>
                                           <Font name="Tahoma" size="15.0" />
@@ -177,9 +177,9 @@
                                           <Font name="Tahoma" size="15.0" />
                                        </font>
                                     </Label>
-                                    <TextField fx:id="bookBuilding1" layoutX="86.0" layoutY="157.0" prefHeight="25.0" prefWidth="155.0" styleClass="label-info" stylesheets="@dashboardDesign.css" />
-                                    <TextField fx:id="bookStart1" layoutX="86.0" layoutY="205.0" prefHeight="25.0" prefWidth="155.0" styleClass="label-info" stylesheets="@dashboardDesign.css" />
-                                    <TextField fx:id="bookEnd1" layoutX="86.0" layoutY="253.0" prefHeight="25.0" prefWidth="155.0" styleClass="label-info" stylesheets="@dashboardDesign.css" />
+                                    <TextField fx:id="bookBuilding1" editable="false" layoutX="86.0" layoutY="157.0" prefHeight="25.0" prefWidth="155.0" styleClass="label-info" stylesheets="@dashboardDesign.css" />
+                                    <TextField fx:id="bookStart1" editable="false" layoutX="86.0" layoutY="205.0" prefHeight="25.0" prefWidth="155.0" styleClass="label-info" stylesheets="@dashboardDesign.css" />
+                                    <TextField fx:id="bookEnd1" editable="false" layoutX="86.0" layoutY="253.0" prefHeight="25.0" prefWidth="155.0" styleClass="label-info" stylesheets="@dashboardDesign.css" />
                                     <Button fx:id="cancelBtn" layoutX="134.0" layoutY="324.0" mnemonicParsing="false" onAction="#cancelBooking" prefHeight="35.0" prefWidth="82.0" styleClass="book-btn" stylesheets="@dashboardDesign.css" text="Cancel" />
                                     <Label layoutX="19.0" layoutY="27.0" text="Your booking:">
                                        <font>
