changed UI color

--- a/src/application/dashboardDesign.css
+++ b/src/application/dashboardDesign.css
@@ -19,7 +19,7 @@
 }
 
 .nav-form{
-    -fx-background-color:linear-gradient(to bottom right, #2d658c, #2ca772);
+    -fx-background-color:linear-gradient(to bottom right, #ff0000, #000000);
 }
 
 .nav-btn{
@@ -32,12 +32,10 @@
 }
 
 .logout{
-    -fx-background-color:#2c84bf;
-    -fx-background-radius:10px;
+    -fx-background-color:#ffffff;
+    -fx-font-size:15px;
     -fx-cursor:hand;
-}
-.logout:hover{
-    -fx-background-color:#1593e7;
+    -fx-text-fill:#000000; 
 }
 
 .shadow{
@@ -66,7 +64,7 @@
 .table-view{
     -fx-background-color:transparent;
     -fx-padding:0px;
-    -fx-border-color:linear-gradient(to bottom right, #2d658c, #2ca772);
+    -fx-border-color:#8B0000;
     -fx-border-width:2px;
     -fx-border-radius:8px;
 }
@@ -74,7 +72,7 @@
     -fx-alignment: CENTER;
 }
 .table-view .column-header-background{
-    -fx-background-color:linear-gradient(to bottom right, #2d658c, #2ca772);
+    -fx-background-color:#8B0000;
     -fx-background-radius:8px 8px 0px 0px;
     -fx-background-inset: 0 0 0 0;
 }
@@ -89,7 +87,7 @@
 
 
 .book-btn{
-    -fx-background-color:#2d7755;
+    -fx-background-color:#8B0000;
     -fx-background-radius:8px;
     -fx-cursor:hand;
     -fx-text-fill:#fff;
@@ -102,7 +100,7 @@
 
 
 .clear-btn{
-    -fx-background-color:#6e2275;
+    -fx-background-color:#000000;
     -fx-background-radius:8px;
     -fx-cursor:hand;
     -fx-text-fill:#fff;
@@ -110,7 +108,7 @@
     -fx-font-family:"Arial";
 }
 .clear-btn:hover{
-    -fx-background-color:#ae21ac;
+    -fx-background-color:#22ad72;
 }
 
 .label-info{
